[tool.poetry]
name = "crawlinsta"
version = "0.1.0"
description = "A python package for crawling instagram based on selenium."
authors = ["Zhiwei Zhang <zhiwei2017@gmail.com>"]
repository = "https://github.com/zhiwei2017/crawlinsta"
license = "MIT"
readme = "README.rst"
keywords = []
packages = [
  {include = "crawlinsta"}
]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "~4.12"
pydantic = "~2.3"
selenium-wire = "~5.1"

[tool.poetry.group.dev.dependencies]
bandit = "~1.7"
flake8 = "~6.1"
mypy = "~1.6"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "~7.4"
pytest-cov = "~4.1"
pytest-runner = "~6.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "~7.1"
sphinx_rtd_theme = "~1.3"
autodoc_pydantic = "~2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "--verbose --doctest-modules --cov-report term-missing --cov=./crawlinsta"